; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/poch/extr_poch.c_poch_channel_free_header.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/poch/extr_poch.c_poch_channel_free_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.channel_info = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.channel_info*)* @poch_channel_free_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @poch_channel_free_header(%struct.channel_info* %0) #0 {
  %2 = alloca %struct.channel_info*, align 8
  %3 = alloca i32, align 4
  store %struct.channel_info* %0, %struct.channel_info** %2, align 8
  %4 = load %struct.channel_info*, %struct.channel_info** %2, align 8
  %5 = getelementptr inbounds %struct.channel_info, %struct.channel_info* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @get_order(i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load %struct.channel_info*, %struct.channel_info** %2, align 8
  %9 = getelementptr inbounds %struct.channel_info, %struct.channel_info* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @__free_pages(i32 %10, i32 %11)
  ret void
}

declare dso_local i32 @get_order(i32) #1

declare dso_local i32 @__free_pages(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
